--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=seviceDiscovery
 
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
+server.port=8761
